<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="estate_detail_title">Estate Detail</string>
    <string name="estate_filter_title">Estate Filter</string>
    <string name="estate_list_photo_desc">Estate Photo</string>
    <string name="estate_type" translatable="false">Type</string>
    <string name="estate_agent" translatable="false">Agent</string>
    <string name="estate_price">Price</string>
    <string name="estate_available">Available</string>
    <string name="estate_availability">Availability</string>
    <string name="estate_sold">Sold</string>
    <string name="estate_property_area">Surface</string>
    <string name="estate_number_rooms">Number of rooms</string>
    <string name="estate_number_bathrooms">Number of bathrooms</string>
    <string name="estate_number_bedrooms">Number of bedrooms</string>
    <string name="estate_description" translatable="false">Description</string>
    <string name="estate_location">Location</string>
    <string name="estate_address">Address</string>
    <string name="estate_additional_address">Additional address</string>
    <string name="estate_zipcode">Zipcode</string>
    <string name="estate_city">City</string>
    <string name="estate_country">Country</string>
    <string name="estate_status">Status</string>
    <string name="estate_points_interest">Points of interest</string>
    <string name="estate_edit_button">Edit Estate</string>
    <string name="estate_media">Media</string>
    <string name="estate_room_picture">Estate room picture</string>
    <string name="app_bar_add">Add estate</string>
    <string name="app_bar_edit">Edit estate</string>
    <string name="app_bar_search">Search estate</string>
    <string name="app_bar_save">Save</string>
    <string name="apply_filter">Apply filters</string>
    <string name="app_bar_clear_filter">Clear Filter</string>
    <string name="property_type_apartment">Apartment</string>
    <string name="property_type_loft" translatable="false">Loft</string>
    <string name="property_type_manor">Manor</string>
    <string name="property_type_house">House</string>
    <string name="property_type_duplex" translatable="false">Duplex</string>
    <string name="poi_parks_and_green_spaces">Parks and Green Spaces</string>
    <string name="poi_schools_and_universities">Schools and Universities</string>
    <string name="poi_shops_and_malls">Shops and Malls</string>
    <string name="poi_restaurants_and_cafes">Restaurants and Coffee</string>
    <string name="poi_public_transport">Public Transport</string>
    <string name="poi_health_services">Health Services</string>
    <string name="poi_community_spaces">Community Spaces</string>
    <string name="save_success">Saved</string>
    <string name="filter_applied_success">Filters applied</string>
    <string name="filter_cleared">Filters Cleared</string>
    <string name="save_general_error">An error occurred while saving, please try later.</string>
    <string name="save_error">One or more fields are incorrect.</string>
    <string name="form_error_not_number">This field must contain only numbers</string>
    <string name="form_error_not_empty">This field is required</string>
    <string name="form_error_superior_or_equal_to">This field must be greater than or equal to %1$d</string>
    <string name="form_error_superior_to">This field must be greater than %1$d</string>
    <string name="value_unknown">Unknown</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="all">All</string>
    <string name="error_select_estate">Please, select an estate to edit</string>
    <string name="form_add_photo">Add pictures :</string>
    <string name="form_add_from_camera">Camera</string>
    <string name="form_add_from_galley">Gallery</string>
    <string name="delete">Delete</string>
    <string name="notification_estate_added">New estate added</string>
    <string name="notification_estate_added_content">The estate has been successfully added</string>
    <string name="tab_name_list">Estate list</string>
    <string name="tab_name_map">Estate map</string>
</resources>
