<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_add_button"
        android:contentDescription="@string/app_bar_add"
        android:enabled="true"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/app_bar_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/app_bar_edit_button"
        android:contentDescription="@string/app_bar_edit"
        android:enabled="true"
        android:icon="@drawable/baseline_edit_24"
        android:title="@string/app_bar_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/app_bar_search_button"
        android:contentDescription="@string/app_bar_search"
        android:enabled="true"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/app_bar_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
</menu>